--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 description = "Linear-style commit convention plugin for Commitizen"
 readme = "README.md"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Quantivly", email = "dev@quantivly.com"}
 ]
 license = {text = "MIT"}
 classifiers = [
@@ -17,7 +17,6 @@ classifiers = [
     "Topic :: Software Development :: Version Control :: Git",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -25,17 +24,17 @@ classifiers = [
     "Typing :: Typed",
 ]
 keywords = ["commitizen", "conventional-commits", "linear", "git", "version-control"]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "commitizen>=3.0.0",
     "typing-extensions>=4.0.0;python_version<'3.10'",
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/cz-linear"
-Documentation = "https://github.com/yourusername/cz-linear#readme"
-"Bug Reports" = "https://github.com/yourusername/cz-linear/issues"
-Source = "https://github.com/yourusername/cz-linear"
+Homepage = "https://github.com/quantivly/cz-linear"
+Documentation = "https://github.com/quantivly/cz-linear#readme"
+"Bug Reports" = "https://github.com/quantivly/cz-linear/issues"
+Source = "https://github.com/quantivly/cz-linear"
 
 [project.entry-points."commitizen.plugin"]
 cz_linear = "cz_linear.cz_linear:LinearCz"
@@ -61,6 +60,8 @@ target-version = ['py38']
 
 [tool.ruff]
 line-length = 88
+
+[tool.ruff.lint]
 select = [
     "E",  # pycodestyle errors
     "W",  # pycodestyle warnings
@@ -72,10 +73,12 @@ select = [
 ]
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+strict = true
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
